# pre-commit-test

./: .isort.cfg  .pre-commit-config.yaml  pyproject.toml
pre_commit_test/: my_module.py
tests/: test_pre_commit_test.py
