[tool.poetry]
name = "pre-commit-test"
version = "0.1.0"
description = ""
authors = ["Taylor Beever <taybeever@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.3.0"
pre-commit = "^2.6.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
